Software/multi_processor_sw/.metadata/.plugins/org.eclipse.cdt.ui/micro_hello.build.log
08:47:14 **** Auto Build of configuration Debug for project micro_hello ****
make all 
'Building file: ../src/helloworld.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -I../../micro_hello_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:66:48: warning: operation on 'test' may be undefined [-Wsequence-point]
      printf("micro:%lx=%c\n",((u32)test),*(test++));
                                           ~~~~~^~~
../src/helloworld.c:68:22: error: 'XPAR_PS7_DDR_0_HP0_AXI_HIGHNAME' undeclared (first use in this function); did you mean 'XPAR_PS7_M_AXI_GP0_S_AXI_HIGHADDR'?
      if(test>=(char*)XPAR_PS7_DDR_0_HP0_AXI_HIGHNAME){
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                      XPAR_PS7_M_AXI_GP0_S_AXI_HIGHADDR
../src/helloworld.c:68:22: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1

08:47:15 Build Finished (took 334ms)

